--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="Programming Question 3 .cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Equillibirium Index.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
