--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Array Formation.cpp" />
+    <ClCompile Include="c-string.cpp" />
     <ClCompile Include="Equillibirium Index.cpp" />
     <ClCompile Include="Programming Question 1 .cpp" />
     <ClCompile Include="Programming Question 2 .cpp" />
