--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="Equillibirium Index.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="c-string.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
