--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj
@@ -127,9 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include=".....cpp" />
+    <ClCompile Include="4.cpp" />
     <ClCompile Include="Array Formation.cpp" />
     <ClCompile Include="c-string.cpp" />
     <ClCompile Include="Equillibirium Index.cpp" />
+    <ClCompile Include="Lab-Manual_Qu#2.cpp" />
+    <ClCompile Include="Lab-Qu#3.cpp" />
+    <ClCompile Include="Lab_manual_Q#1.cpp" />
     <ClCompile Include="Programming Question 1 .cpp" />
     <ClCompile Include="Programming Question 2 .cpp" />
     <ClCompile Include="Programming Question 3 .cpp" />
