--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include=".....cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Searching in array.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
