--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="Lab-Manual_Qu#2.cpp" />
     <ClCompile Include="Lab-Qu#3.cpp" />
     <ClCompile Include="Lab_manual_Q#1.cpp" />
+    <ClCompile Include="pointers.cpp" />
     <ClCompile Include="Programming Question 1 .cpp" />
     <ClCompile Include="Programming Question 2 .cpp" />
     <ClCompile Include="Programming Question 3 .cpp" />
