--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include=".....cpp" />
+    <ClCompile Include="1.cpp" />
     <ClCompile Include="4.cpp" />
     <ClCompile Include="Array Formation.cpp" />
     <ClCompile Include="binary_search_in_an_array.cpp" />
