--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
@@ -60,5 +60,14 @@
     <ClCompile Include="1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="class_work.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Assignment 1 Question no.4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="yourRollnumber.txt" />
   </ItemGroup>
 </Project>
