--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\Assignment_1_PF_FAST">
+      <UniqueIdentifier>{9d812d6f-174a-420c-850c-c603421e6bc6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Array Formation.cpp">
@@ -65,6 +68,9 @@
     </ClCompile>
     <ClCompile Include="Assignment 1 Question no.4.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Question number 1.cpp">
+      <Filter>Source Files\Assignment_1_PF_FAST</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
