--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
@@ -66,10 +66,10 @@
     <ClCompile Include="class_work.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Assignment 1 Question no.4.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Question number 1.cpp">
+      <Filter>Source Files\Assignment_1_PF_FAST</Filter>
+    </ClCompile>
+    <ClCompile Include="Question number 4.cpp">
       <Filter>Source Files\Assignment_1_PF_FAST</Filter>
     </ClCompile>
   </ItemGroup>
