--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
@@ -66,7 +66,7 @@
     <ClCompile Include="class_work.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Question number 1.cpp">
+    <ClCompile Include="Assignment_Question number 1.cpp">
       <Filter>Source Files\Assignment_1_PF_FAST</Filter>
     </ClCompile>
     <ClCompile Include="Question number 4.cpp">
