--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj
@@ -143,7 +143,7 @@
     <ClCompile Include="Programming Question 1 .cpp" />
     <ClCompile Include="Programming Question 2 .cpp" />
     <ClCompile Include="Programming Question 3 .cpp" />
-    <ClCompile Include="Question number 1.cpp" />
+    <ClCompile Include="Assignment_Question number 1.cpp" />
     <ClCompile Include="Searching in array.cpp" />
   </ItemGroup>
   <ItemGroup>
