--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj
@@ -131,7 +131,7 @@
     <ClCompile Include="1.cpp" />
     <ClCompile Include="4.cpp" />
     <ClCompile Include="Array Formation.cpp" />
-    <ClCompile Include="Question number 4.cpp" />
+    <ClCompile Include="Assignment_Question number 4.cpp" />
     <ClCompile Include="binary_search_in_an_array.cpp" />
     <ClCompile Include="c-string.cpp" />
     <ClCompile Include="class_work.cpp" />
