--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
@@ -69,7 +69,7 @@
     <ClCompile Include="Assignment_Question number 1.cpp">
       <Filter>Source Files\Assignment_1_PF_FAST</Filter>
     </ClCompile>
-    <ClCompile Include="Question number 4.cpp">
+    <ClCompile Include="Assignment_Question number 4.cpp">
       <Filter>Source Files\Assignment_1_PF_FAST</Filter>
     </ClCompile>
   </ItemGroup>
