--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="4.cpp" />
     <ClCompile Include="Array Formation.cpp" />
     <ClCompile Include="Assignment_Question number 4.cpp" />
+    <ClCompile Include="Assignment_Question_number_2.cpp" />
     <ClCompile Include="binary_search_in_an_array.cpp" />
     <ClCompile Include="c-string.cpp" />
     <ClCompile Include="class_work.cpp" />
