--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj
@@ -153,6 +153,7 @@
     <Text Include="yourRollnumber.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="HEADER.h" />
     <ClInclude Include="Student.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
