--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Assignment_Question number 1.cpp" />
     <ClCompile Include="Searching in array.cpp" />
     <ClCompile Include="Struct_!!!.cpp" />
+    <ClCompile Include="vol.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="yourRollnumber.txt" />
