--- a/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
+++ b/2nd_SEMESTER_2025_FAST_EE.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="vol.cpp">
       <Filter>Source Files\Assignment_1_PF_FAST</Filter>
     </ClCompile>
+    <ClCompile Include="lab final prep.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="yourRollnumber.txt" />
